slight update to check game logic

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 <div>Player</div>
                 <div id="playerScore">0</div>
             </div>
+            <div>
+                <button id="reset">Reset</button>
+            </div>
             <div id="playerTwo" class="scoreCard">
                 <div>CPU</div>
                 <div id="CPUScore">0</div>
